Moved links from sidebar to top bar, added Twitter Bootstrap, fixed skeleton, login and reset-pw pages

--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'skeleton.html' %}
-{% block main_classes %} class="tt-index"{% endblock main_classes %}
-{% block head_classes %} class="tt-index"{% endblock head_classes %}
+{% block main_classes %} tt-index{% endblock main_classes %}
+{% block head_classes %} tt-index{% endblock head_classes %}
 {% block sidebar %}{% endblock sidebar %}
 {% block main %}<ul id="tt-main-dashboard">
 				<li><a class="tt-board" href="{% url web.board %}">View the board</a></li>
