--- a/web/templates/pages/password_reset_complete.html
+++ b/web/templates/pages/password_reset_complete.html
@@ -3,4 +3,4 @@
 			<div id="tt-auth">
 				<p>Your password has been reset. The access with the old one is no longer possible.</p>
 			</div>
-		</div>{% endblock main %}{% block main_classes %} class="tt-login"{% endblock main_classes %}
+		</div>{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
