--- a/web/templates/pages/password_reset_confirm.html
+++ b/web/templates/pages/password_reset_confirm.html
@@ -4,4 +4,4 @@
 				<p>To set the new password, just enter the new one twice to the form below.</p>
 				{% include 'blocks/password_reset_confirm.html' %}
 			</div>
-		</div>{% endblock main %}{% block main_classes %} class="tt-login"{% endblock main_classes %}
+		</div>{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
