--- a/web/templates/pages/password_reset_done.html
+++ b/web/templates/pages/password_reset_done.html
@@ -5,4 +5,4 @@
 					<p>You have received an email with the instruction for your password reset and a link to the page where you can finish the process. <strong>Your old password is no longer usable.</strong></p>
 				</div>
 			</div>
-		</div>{% endblock main %}{% block main_classes %} class="tt-login"{% endblock main_classes %}
+		</div>{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
