--- a/web/templates/blocks/password_reset.html
+++ b/web/templates/blocks/password_reset.html
@@ -1,19 +1,21 @@
-{% load form_tags %}<form action="#" method="post" class="tt-form tt-auth-block">
+{% load form_tags %}<form action="#" method="post" class="form-horizontal tt-form tt-auth-block">
 				<fieldset>
 					<legend>Password Reset</legend>
-					<ol>{% for field in form %}{% if not field.is_hidden %}
-						<li id="{{ field.name }}"{{ field|print_classes }}>
-							{{ field.label_tag }}
-							{{ field|one_line }}{% if field.help_text %}
-							<span class="tt-form-help">{{ field.help_text }}</span>{% endif %}{% if field.errors|length %}
-							{{ field.errors }}{% endif %}
-						</li>{% endif %}{% endfor %}
-					</ol>{% if form.non_field_errors|length %}
+					{% for field in form %}{% if not field.is_hidden %}
+						<div class="control-group" id="{{ field.name }}"{{ field|print_classes }}>
+							<label class="control-label" for="appendedInput">{{ field.label_tag }}</label>
+							<div class="controls">
+								{{ field|one_line }}{% if field.help_text %}
+								<p class="help-block tt-form-help">{{ field.help_text }}</p>{% endif %}{% if field.errors|length %}
+								{{ field.errors }}{% endif %}
+							</div>
+						</div>{% endif %}{% endfor %}
+					{% if form.non_field_errors|length %}
 					{{ form.non_field_errors }}{% endif %}
-					<div>{% for field in form %}{% if field.is_hidden %}
+					<div class="form-actions">{% for field in form %}{% if field.is_hidden %}
 						{{ field }}{% endif %}{% endfor %}
 						{% csrf_token %}
-						<input id="login" name="login" type="submit" value="Finish" />
+						<input id="login" name="login" type="submit" value="Finish" class="btn btn-primary" />
 					</div>
 				</fieldset>
 			</form>
