Boostrap responsive fix, requirements.txt update, modern styles and new markup for pw reset, login forms and skeleton, use bootstrap forms

--- a/web/templates/pages/password_reset_complete.html
+++ b/web/templates/pages/password_reset_complete.html
@@ -1,6 +1,4 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - Reset Password{% endblock title %}
-{% block sidebar %}{% endblock sidebar %}{% block main %}<div id="tt-main-layout">
-			<div id="tt-auth">
-				<p>Your password has been reset. The access with the old one is no longer possible.</p>
-			</div>
-		</div>{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% block main %}
+<div class="alert alert-block alert-success">Your password has been reset. The access with the old one is no longer possible.</div>
+{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
