--- a/web/templates/pages/password_reset_confirm.html
+++ b/web/templates/pages/password_reset_confirm.html
@@ -1,7 +1,5 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - Password Reset{% endblock title %}
-{% block sidebar %}{% endblock sidebar %}{% block main %}<div id="tt-main-layout">
-			<div id="tt-auth">
-				<p>To set the new password, just enter the new one twice to the form below.</p>
-				{% include 'blocks/password_reset_confirm.html' %}
-			</div>
-		</div>{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% block main %}
+<div class="alert alert-block">To set the new password, just enter the new one twice to the form below.</div>
+{% include 'blocks/password_reset_confirm.html' %}
+{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
