--- a/media/css/modern.css
+++ b/media/css/modern.css
@@ -3,14 +3,50 @@
 .nav .tt-user-dropdown .dropdown-menu::after {left:auto;right:10px;}
 .nav .tt-user-dropdown .dropdown-menu::before {left:auto;right:9px;}
 .navbar .brand {font-family:'Norican', cursive;width:99px;display:block;} /* use precalculated width to avoid menu lags */
-		
+.footer .we-run, .footer .we-run a {color:#888;font-size:11px;}
+
 /* Board */
-#tt-board-columns {margin:2em 0 0 2em;letter-spacing:-4px;}
-#tt-board-columns li {vertical-align:top;display:inline-block;letter-spacing:normal;word-spacing:normal;width:30em;margin:0 2em 0 0;}
-#tt-board-columns li h4 {font-size:2em;font-family:'Open Sans Condensed',sans-serif;}
-#tt-board-columns li .tt-side-list {position:relative;margin:2em 0 0 0;width:27.6em;}
-#tt-board-columns li .tt-side-list li {width:25em;}
-#tt-board-columns li .tt-board-story-tasks {border-top:1px solid #999;padding:1em 0 0 0;}
-#tt-board-columns li .tt-board-story-tasks li {width:auto;font-size:1.2em;margin:0 0 .8333333em 0;display:block;}
-#tt-board-columns li .tt-board-story-actions {letter-spacing:-4px;}
-#tt-board-columns li .tt-board-story-actions li {display:inline-block;letter-spacing:normal;word-spacing:normal;margin:0 0 .41666666em 0;}
+#tt-board-columns {margin:2em 0;}
+#tt-board-columns  li.well {padding:8px 0 8px;}
+#tt-board-columns > li {vertical-align:top;display:inline-block;letter-spacing:normal;word-spacing:normal;width:30em;margin:0 2em 2em 0;}
+#tt-board-columns > li h4 {padding:0px 22px 8px 22px;color:#999;text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);}
+#tt-board-columns > li .tt-side-list {position:relative;margin:0;width:100%;}
+#tt-board-columns > li .tt-side-list li {width:auto}
+#tt-board-columns > li .tt-board-story-tasks {border-top:1px solid #999;padding:1em 0 0 0;}
+#tt-board-columns > li .tt-board-story-tasks li {width:auto;font-size:1.2em;margin:0 0 .8333333em 0;display:block;}
+#tt-board-columns > li .tt-board-story-actions li {display:inline-block;letter-spacing:normal;word-spacing:normal;margin:0 0 .41666666em 0;}
+
+/* iPhone 4 */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+	#tt-board-columns > li {display:block;width:auto;margin-right:0;}
+}
+
+/*Story flags*/
+.tt-side-list { list-style:none; }
+.tt-side-list li.tt-story-green h6 {color:#5f8e00;}
+.tt-side-list li.tt-story-M {border-left:10px solid #F5380C;}
+.tt-side-list li.tt-story-S {border-left:10px solid #2809FF;}
+.tt-side-list li.tt-story-C {border-left:10px solid #0D9FD9;}
+.tt-side-list li.tt-story-W {border-left:10px solid #5f8e00;}
+.tt-side-list li.tt-story- {border-left:10px solid #ddd;}
+
+.tt-side-list li.tt-story-M span {background:#F5380C;}
+.tt-side-list li.tt-story-S span {background:#2809FF;}
+.tt-side-list li.tt-story-C span {background:#0D9FD9;}
+.tt-side-list li.tt-story-W span {background:#5f8e00;}
+.tt-side-list li.tt-story- span {background:#000;}
+
+.tt-side-list {width:25em;position:absolute;padding:0;min-height:22em;}
+.tt-side-list li {background:#fff;margin:0;padding:.5em 0 .5em 1em;}
+.tt-side-list li.tt-odd {background:#eee;}
+.tt-side-list li h6 {font-size:1em;font-family:'Open Sans Condensed',sans-serif;margin:0;}
+.tt-side-list li h6 a {text-decoration:none;}
+.tt-side-list li p {font-size:1.2em;line-height:1.6666666;margin:0 1.6666666em 0 0;}
+.tt-side-list li span {display:block;padding:0 .3333333em;margin:.666666em 0 0 0;height:1.333333em;font-size:1.5em;float:right;text-align:center;color:#fff;}
+.tt-side-list li ol {margin:4em 0 0 0;clear:both;}
+.tt-side-list li ol li {border:none;padding:0;display:inline-block;margin:0 .5em .5em 0;}
+.tt-side-list li ol li a {font-size:1.2em;color:#000;}
+
+.tt-side-list.tt-sidelist-open p, .tt-side-list.tt-sidelist-open ol, .tt-side-list.tt-sidelist-open span, {display:block;}
