--- a/media/css/modern.css
+++ b/media/css/modern.css
@@ -22,13 +22,6 @@
 #tt-board-columns > li .tt-board-story-actions li {display:inline-block;}
 #tt-board-columns > li .tt-story-score {border-radius:12px;color:#fff;font-weight:bold;text-shadow:0 1px #333;width:20px;text-align:center;float:right;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);box-shadow:inset 0 1px 2px rgba(0,0,0,.5);}
 
-/* Board: iPhone4*/
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-	#tt-board-columns > li {display:block;width:auto;margin-right:0;}
-}
-
 /* Story flags */
 .tt-side-list { list-style:none; }
 .tt-side-list li.tt-story-green h6 a {color:#5f8e00;}
@@ -73,3 +66,9 @@ only screen and (min-device-pixel-ratio : 1.5) {
 .tt-side-list li ol li a {font-size:1.2em;color:#000;}*/
 
 .tt-side-list.tt-sidelist-open p, .tt-side-list.tt-sidelist-open ol, .tt-side-list.tt-sidelist-open span {display:block;}
+
+/* Responsible */
+@media (max-width: 480px) {
+	#tt-main.tt-index .hero-unit h1 { font-size:32px; }
+	#tt-board-columns > li {display:block;width:auto;margin-right:0;}
+}
