--- a/web/templates/skeleton.html
+++ b/web/templates/skeleton.html
@@ -70,7 +70,7 @@
 				<p class="we-run">We run <a href="http://djangoproject.com/">Django {{ django_version }}</a> / <a href="http://www.python.org/">Python {{ python_version }}</a> / <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap 2.0</a></p>
 			</div><!-- /.footer -->
 
-		</div><!--/.container -->
+		</div><!--/.container-fluid -->
 		{% block extra_script_before %}{% endblock extra_script_before %}
 		<script src="/media/js/jquery.js" type="text/javascript"></script>
 		<script src="/media/js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
