--- a/web/templates/blocks/board_columns.html
+++ b/web/templates/blocks/board_columns.html
@@ -1,9 +1,10 @@
 {% load story_tags %}{% load user_tags %}<ul id="tt-board-columns">{% for column in board_columns %}
 					<li class="well">
-						<h4 class="tt-board">{{ column.title }}</h4>
+						<h4>{{ column.title }}</h4>
 						<ul id="tt-backlog-list-{{ column.tag }}" class="tt-side-list">{% for story in column.get_stories %}
 							<li class="tt-story-{{ story.moscow }}{% if story.is_green %} tt-story-green{% endif %}{% cycle ' tt-odd' ' tt-even' %}">
-								<h6><span class="tt-story-score">{% if story.time_boxed %}[{{ story|calculate_score }}]{% else %}{{ story|calculate_score }}{% endif %}</span><a id="tt-story-id-{{ story.id }}" {% if story.is_burning %} class="tt-fire"{% endif %} href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}</a></h6>
+								<span class="tt-story-score">{% if story.time_boxed %}[{{ story|calculate_score }}]{% else %}{{ story|calculate_score }}{% endif %}</span>
+								<h6><a id="tt-story-id-{{ story.id }}" {% if story.is_burning %} class="tt-fire"{% endif %} href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}</a></h6>
 								<p>{{ story.story_description }}</p>
 								<ol class="tt-board-story-tasks">{% for task in story.task_set.all %}
 									<li>{{ task.description }} ({{ task.score }}) - {{ task.owner.first_name }} {{ task.owner.last_name|name_initial }}.</li>{% endfor %}
