--- a/web/templates/pages/board.html
+++ b/web/templates/pages/board.html
@@ -1,11 +1,19 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - Board{% endblock title %}
-{% block main %}<div id="tt-board">
-			<div class="btn-toolbar pull-right">
-				<div class="btn-group">
-					<a class="btn{% if not mine_only %} active{% endif %}" href="{% url web.board %}">All Stories</a>
-					<a class="btn{% if mine_only %} active{% endif %}" href="{% url web.board_mine_only %}">My Stories</a>
-				</div>
+{% block main %}
+<div class="row-fluid">
+	<div class="span12">
+		<div class="btn-toolbar pull-right">
+			<div class="btn-group">
+				<a class="btn{% if not mine_only %} active{% endif %}" href="{% url web.board %}">All Stories</a>
+				<a class="btn{% if mine_only %} active{% endif %}" href="{% url web.board_mine_only %}">My Stories</a>
 			</div>
-			<h2 class="tt-board">Board{% if not current_sprint %} - No Active Sprint{% else %} for Sprint {{ current_sprint.sprint_number }}, named: {{ current_sprint.name }}{% endif %}</h2>
-			{% if current_sprint %}{% include 'blocks/board_columns.html' %}{% endif %}
-			</div>{% endblock main %}
+		</div>
+		<h2>Board{% if not current_sprint %} - No Active Sprint{% else %} for Sprint {{ current_sprint.sprint_number }}, named: {{ current_sprint.name }}{% endif %}</h2>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span12" id="tt-board">
+		{% if current_sprint %}{% include 'blocks/board_columns.html' %}{% endif %}
+	</div>
+</div>
+{% endblock main %}
