--- a/web/templates/pages/my_stuff.html
+++ b/web/templates/pages/my_stuff.html
@@ -1,5 +1,19 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff{% endblock title %}
-{% block main %}{% include 'blocks/my_stories_list.html' %}
-			<div id="tt-mystuff">
-				<h2 class="tt-mystuff">My Stuff{% if not current_sprint %} - No Active Sprint{% endif %}</h2>
-			</div>{% endblock main %}
+{% block main %}
+<div class="row-fluid">
+	<div class="span12">
+		<div class="btn-toolbar pull-right">
+			<a href="{% url web.my_stuff_story_fire %}" class="btn"><i class="icon-fire"></i> Add Fire</a>
+		</div>
+		<h2>My Stuff{% if not current_sprint %} - No Active Sprint{% endif %}</h2>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span4">
+		<div class="well" id="tt-my-stuff">
+		{% include 'blocks/my_stories_list.html' %}
+		</div>
+	</div>
+	<div class="span8"></div>
+</div>
+{% endblock main %}
