--- a/web/templates/pages/my_stuff_fire.html
+++ b/web/templates/pages/my_stuff_fire.html
@@ -1,6 +1,21 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff - Add Fire Story{% endblock title %}
-{% block main %}{% include 'blocks/my_stories_list.html' %}
-			<div id="tt-mystuff">
-				<h2 class="tt-mystuff"><a href="{% url web.my_stuff %}">My Stuff</a> - {% if not current_sprint %}Cannot Add Fire While No Sprint Is Active{% else %}Add Fire Story{% endif %}</h2>{% if current_sprint %}
-				{% include 'blocks/my_stuff_fire.html' %}{% endif %}
-			</div>{% endblock main %}
+{% block main %}
+<div class="row-fluid">
+	<div class="span12">
+		<div class="btn-toolbar pull-right">
+			<a href="{% url web.my_stuff_story_fire %}" class="btn"><i class="icon-fire"></i> Add Fire</a>
+		</div>
+		<h2><a href="{% url web.my_stuff %}">My Stuff</a> <!-- / --> {% if not current_sprint %}Cannot Add Fire While No Sprint Is Active{% else %}<!-- Add/Edit Fire Story -->{% endif %}</h2>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span4">
+		<div class="well" id="tt-my-stuff">
+			{% include 'blocks/my_stories_list.html' %}
+		</div>
+	</div>
+	<div class="span8">
+		{% if current_sprint %}{% include 'blocks/my_stuff_fire.html' %}{% endif %}
+	</div>
+</div>
+{% endblock main %}
