--- a/media/css/modern.css
+++ b/media/css/modern.css
@@ -5,7 +5,19 @@
 .navbar .brand {font-family:'Norican', cursive;width:99px;display:block;} /* use precalculated width to avoid menu lags */
 .footer .we-run, .footer .we-run a {color:#888;font-size:11px;}
 
-.nav span.tt-unfinished-tickets-badge {border-radius:12px;color:#fff;font-weight:bold;text-shadow:0 1px #333;width:20px;text-align:center;background:rgb(0,135,210);margin-left:5px;display:inline-block;vertical-align:top;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);box-shadow:inset 0 1px 2px rgba(0,0,0,.5);}
+.nav span.tt-unfinished-tickets-badge {border-radius:12px;color:#fff;font-weight:bold;text-shadow:0 1px #333;min-width:10px;padding:0 5px;text-align:center;background:rgb(0,135,210);margin-left:5px;display:inline-block;vertical-align:top;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);box-shadow:inset 0 1px 2px rgba(0,0,0,.5);}
+
+.page-subtitle {
+	display: block;
+	width: 100%;
+	padding: 0;
+	margin-bottom: 17px;
+	font-size: 19.5px;
+	font-weight: normal;
+	line-height: 36px;
+	color: #333;
+	border-bottom: 1px solid #EEE;
+}
 
 /* Index */
 #tt-main.tt-index .hero-unit h1 {font-family:'Norican',cursive;}
@@ -18,15 +30,23 @@
 #tt-board-columns > li .tt-side-list {position:relative;margin:0;width:100%;}
 #tt-board-columns > li .tt-side-list li {width:auto;}
 
-/* My stuff */
-#tt-my-stuff {margin:0;}
-#tt-my-stuff.well {padding:8px 0;}
-#tt-my-stuff > .tt-side-list {width:auto;}
+/* Tasks */
+.tt-tasks .tt-board-story-tasks {margin:0;}
+.tt-tasks .tt-board-story-tasks .tt-task-actions {margin-top:-2px;width:120px;text-align:right;}
+.tt-tasks .tt-board-story-tasks li {list-style:none;background-color:#F7F7F9;margin-bottom:2px;padding:4px 4px 4px 8px;border:1px solid #E5E5E5;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
 
 /* Story flags */
+.tt-side-wrap {margin:0;}
+.tt-side-wrap.well {padding:8px 4px;}
+.tt-side-wrap > h4 {padding:0px 13px 8px;}
+.tt-side-wrap > .tt-side-list {width:auto;}
+
 .tt-side-list { list-style:none; }
 .tt-side-list li.tt-story-green h6 a {color:#5f8e00;}
 .tt-side-list li.tt-story-green h6 a:hover {color:green;}
+/*.tt-side-list li.tt-story-fire, 
+.tt-side-list li.tt-odd.tt-story-fire,
+.tt-side-list li.tt-even.tt-story-fire {background-color:#FFEBEB;}*/
 
 .tt-side-list li.tt-story-green h6:before,
 .tt-side-list li.tt-story-M h6:before,
@@ -38,13 +58,13 @@
 .tt-side-list li.tt-story-green .tt-story-score,
 .tt-side-list li.tt-story-green h6:before {background:#5f8e00;}
 .tt-side-list li.tt-story-M .tt-story-score,
-.tt-side-list li.tt-story-M h6:before {background:#F5380C;}
+.tt-side-list li.tt-story-M h6:before {background:#B94A48;}
 .tt-side-list li.tt-story-S .tt-story-score,
 .tt-side-list li.tt-story-S h6:before {background:#2809FF;}
 .tt-side-list li.tt-story-C .tt-story-score,
 .tt-side-list li.tt-story-C h6:before {background:#0D9FD9;}
 .tt-side-list li.tt-story-W .tt-story-score,
-.tt-side-list li.tt-story-W h6:before {background:#5f8e00;}
+.tt-side-list li.tt-story-W h6:before {background:#468847;}
 .tt-side-list li.tt-story- .tt-story-score {background:#999;}
 
 .tt-side-list li.tt-story-green h6:before {content:"G"}
@@ -56,14 +76,14 @@
 
 .tt-side-list {width:25em;margin:0;min-height:22em;}
 .tt-side-list > li {background:#fff;margin:0;padding:.5em 13px .5em;}
-/*.tt-side-list > li.tt-odd,*/ .tt-side-list > li:nth-child(odd) {background:#f1f1f1;}
-.tt-side-list > li h6 {font-size:1em;margin:0px;}
+.tt-side-list > li.tt-odd {background:#f1f1f1;}
+.tt-side-list > li h6 {font-size:1em;}
 .tt-side-list > li h6 a {text-decoration:none;}
-.tt-side-list > li p {margin-top:5px;}
-.tt-side-list .tt-board-story-tasks {margin:0 0 1em;}
+.tt-side-list > li h6 + .tt-board-story-tasks, .tt-side-list > li h6 + * {margin-top:9px;}
+.tt-side-list li .tt-board-story-tasks {margin:0 0 9px;}
 .tt-side-list .tt-board-story-tasks li {width:auto;margin:2px 0px 2px 18px;padding:0;list-style:disc;}
 .tt-side-list .tt-board-story-actions li {display:inline-block;}
-.tt-side-list .tt-story-score {border-radius:12px;color:#fff;font-weight:bold;text-shadow:0 1px #333;width:20px;text-align:center;float:right;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);box-shadow:inset 0 1px 2px rgba(0,0,0,.5);}
+.tt-side-list .tt-story-score {border-radius:12px;color:#fff;font-weight:bold;text-shadow:0 1px #333;min-width:10px;padding:0 5px;text-align:center;float:right;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.5);box-shadow:inset 0 1px 2px rgba(0,0,0,.5);}
 /*.tt-side-list li p {font-size:1.2em;line-height:1.6666666;margin:0 1.6666666em 0 0;}
 .tt-side-list li span {display:block;padding:0 .3333333em;margin:.666666em 0 0 0;height:1.333333em;font-size:1.5em;float:right;text-align:center;color:#fff;}
 .tt-side-list li ol {margin:00;clear:both;}
