--- a/web/templates/blocks/board_columns.html
+++ b/web/templates/blocks/board_columns.html
@@ -1,19 +1,25 @@
-{% load story_tags %}{% load user_tags %}<ul id="tt-board-columns">{% for column in board_columns %}
-					<li class="well">
-						<h4>{{ column.title }}</h4>
-						<ul id="tt-backlog-list-{{ column.tag }}" class="tt-side-list">{% for story in column.get_stories %}
-							<li class="tt-story-{{ story.moscow }}{% if story.is_green %} tt-story-green{% endif %}{% cycle ' tt-odd' ' tt-even' %}">
-								<span class="tt-story-score">{% if story.time_boxed %}[{{ story|calculate_score }}]{% else %}{{ story|calculate_score }}{% endif %}</span>
-								<h6><a id="tt-story-id-{{ story.id }}" {% if story.is_burning %} class="tt-fire"{% endif %} href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}</a></h6>
-								<p>{{ story.story_description }}</p>
-								<ol class="tt-board-story-tasks">{% for task in story.task_set.all %}
-									<li>{{ task.description }} ({{ task.score }}) - {{ task.owner.first_name }} {{ task.owner.last_name|name_initial }}.</li>{% endfor %}
-								</ol>
-								<ol class="tt-board-story-actions">{% if story.state != 'DONE' and story.state != 'FIRE' %}
-									<li><a href="{% url web.board_story_next story.id %}">Move to Next Column</a></li>{% endif %}{% if story.state != first_column_tag %}
-									<li><a href="{% url web.board_story_previous story.id %}">Move to Previous Column</a></li>{% endif %}
-								</ol>
-							</li>{% endfor %}
-						</ul>
-					</li>{% endfor %}
-				</ul>
+{% load story_tags %}{% load user_tags %}<ul id="tt-board-columns">
+	{% for column in board_columns %}
+	<li class="well">
+		<h4>{{ column.title }}</h4>
+		<ul id="tt-backlog-list-{{ column.tag }}" class="tt-side-list">
+			{% for story in column.get_stories %}
+			<li class="tt-story-{{ story.moscow }}{% if story.is_burning %} tt-story-fire{% endif %}{% if story.is_green %} tt-story-green{% endif %}{% cycle ' tt-odd' ' tt-even' %}">
+				<span class="tt-story-score">{% if story.time_boxed %}[{% endif %}{% if story|calculate_score == -2 %}&infin;{% else %}{% if story|calculate_score == -1 %}?{% else %}{{ story|calculate_score }}{% endif %}{% endif %}{% if story.time_boxed %}]{% endif %}</span>
+				<h6><a id="tt-story-id-{{ story.id }}" {% if story.is_burning %} class="tt-fire"{% endif %} href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}{% if story.is_burning %} <span class="label label-important">FIRE</span>{% endif %}{% if story.is_green %} <span class="label label-success">GREEN</span>{% endif %}</a></h6>
+				{% if story.story_description %}
+				<p class="tt-story-description">{{ story.story_description }}</p>
+				{% endif %}
+				<ol class="tt-board-story-tasks">{% for task in story.task_set.all %}
+					<li>{{ task.description }} ({{ task.score }}) - {{ task.owner.first_name }} {{ task.owner.last_name|name_initial }}.</li>{% endfor %}
+				</ol>
+				<ol class="tt-board-story-actions">{% if story.state != 'DONE' and story.state != 'FIRE' %}
+					<li><a href="{% url web.board_story_next story.id %}">Move to Next Column</a></li>{% endif %}{% if story.state != first_column_tag %}
+					<li><a href="{% url web.board_story_previous story.id %}">Move to Previous Column</a></li>{% endif %}
+				</ol>
+			</li>
+			{% endfor %}
+		</ul>
+	</li>
+	{% endfor %}
+</ul>
