--- a/web/templates/blocks/my_stories_list.html
+++ b/web/templates/blocks/my_stories_list.html
@@ -1,9 +1,9 @@
 {% load story_tags %}
 <ul id="tt-my-stuff-list" class="tt-side-list tt-non-collapsible">
 	{% for story in open_stories %}
-	<li class="tt-story-{{ story.moscow }}{% if story.is_green %} tt-story-green{% endif %}{% cycle ' tt-odd' ' tt-even' %}">
-		<span class="tt-story-score">{% if story.time_boxed %}[{{ story|calculate_score }}]{% else %}{{ story|calculate_score }}{% endif %}</span>
-		<h6><a href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}</a></h6>
+	<li class="tt-story-{{ story.moscow }}{% if story.is_burning %} tt-story-fire{% endif %}{% if story.is_green %} tt-story-green{% endif %}{% cycle ' tt-odd' ' tt-even' %}">
+		<span class="tt-story-score">{% if story.time_boxed %}[{% endif %}{% if story|calculate_score == -2 %}&infin;{% else %}{% if story|calculate_score == -1 %}?{% else %}{{ story|calculate_score }}{% endif %}{% endif %}{% if story.time_boxed %}]{% endif %}</span>
+		<h6><a href="{% url web.backlog_story_edit story.id %}">{% if story.is_green %}G/{% endif %}{{ story.title }}{% if story.is_burning %} <span class="label label-important">FIRE</span>{% endif %}{% if story.is_green %} <span class="label label-success">GREEN</span>{% endif %}</a></h6>
 		<p>{{ story.story_description|truncatewords:10 }}</p>
 		<p>
 			{% if story.is_burning %}<a href="{% url web.my_stuff_story_fire_edit story.id %}" class="btn btn-mini">Edit fire</a>{% endif %}
