--- a/web/templates/pages/board.html
+++ b/web/templates/pages/board.html
@@ -1,8 +1,8 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - Board{% endblock title %}
 {% block main %}
 <div class="row-fluid">
-	<div class="span12">
-		<div class="btn-toolbar pull-right">
+	<div class="span12" style="margin-bottom:9px;">
+		<div class="btn-toolbar pull-right" style="margin:0;">
 			<div class="btn-group">
 				<a class="btn{% if not mine_only %} active{% endif %}" href="{% url web.board %}">All Stories</a>
 				<a class="btn{% if mine_only %} active{% endif %}" href="{% url web.board_mine_only %}">My Stories</a>
