--- a/web/templates/pages/my_stuff.html
+++ b/web/templates/pages/my_stuff.html
@@ -1,19 +1,19 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff{% endblock title %}
 {% block main %}
-<div class="row-fluid">
+<div class="row-fluid" style="margin-bottom:9px;">
 	<div class="span12">
-		<div class="btn-toolbar pull-right">
+		<div class="btn-toolbar pull-right" style="margin:0;">
 			<a href="{% url web.my_stuff_story_fire %}" class="btn"><i class="icon-fire"></i> Add Fire</a>
 		</div>
 		<h2>My Stuff{% if not current_sprint %} - No Active Sprint{% endif %}</h2>
 	</div>
 </div>
 <div class="row-fluid">
-	<div class="span4">
-		<div class="well" id="tt-my-stuff">
-		{% include 'blocks/my_stories_list.html' %}
+	<div class="span8">
+		<div class="well tt-side-wrap" id="tt-my-stuff">
+			<h4>Stories</h4>
+			{% include 'blocks/my_stories_list.html' %}
 		</div>
 	</div>
-	<div class="span8"></div>
 </div>
 {% endblock main %}
