--- a/web/templates/pages/my_stuff_fire.html
+++ b/web/templates/pages/my_stuff_fire.html
@@ -1,20 +1,21 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff - Add Fire Story{% endblock title %}
 {% block main %}
-<div class="row-fluid">
+<div class="row-fluid" style="margin-bottom:9px;">
 	<div class="span12">
-		<div class="btn-toolbar pull-right">
+		<div class="btn-toolbar pull-right" style="margin:0;">
 			<a href="{% url web.my_stuff_story_fire %}" class="btn"><i class="icon-fire"></i> Add Fire</a>
 		</div>
-		<h2><a href="{% url web.my_stuff %}">My Stuff</a> <!-- / --> {% if not current_sprint %}Cannot Add Fire While No Sprint Is Active{% else %}<!-- Add/Edit Fire Story -->{% endif %}</h2>
+		<h2><a href="{% url web.my_stuff %}">My Stuff</a> {% if not current_sprint %}Cannot Add Fire While No Sprint Is Active{% else %}<!-- Add/Edit Fire Story -->{% endif %}</h2>
 	</div>
 </div>
 <div class="row-fluid">
-	<div class="span4">
-		<div class="well" id="tt-my-stuff">
+	<div class="span5">
+		<div class="well tt-side-wrap" id="tt-my-stuff">
+			<h4>Stories</h4>
 			{% include 'blocks/my_stories_list.html' %}
 		</div>
 	</div>
-	<div class="span8">
+	<div class="span7">
 		{% if current_sprint %}{% include 'blocks/my_stuff_fire.html' %}{% endif %}
 	</div>
 </div>
