--- a/web/templates/pages/my_stuff_story_tasks.html
+++ b/web/templates/pages/my_stuff_story_tasks.html
@@ -1,6 +1,22 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff{% endblock title %}
-{% block main %}{% include 'blocks/my_stories_list.html' %}
-			<div id="tt-mystuff">
-				<h2 class="tt-mystuff"><a href="{% url web.my_stuff %}">My Stuff</a> - Story: {{ selected_story.title }} - Tasks</h2>
-				{% include 'blocks/my_stuff_story_tasks.html' %}
-			</div>{% endblock main %}
+{% block main %}
+<div class="row-fluid">
+	<div class="span12" style="margin-bottom:9px;">
+		<h2><a href="{% url web.my_stuff %}">My Stuff</a> / Story: {{ selected_story.title }} Tasks</h2>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span5" style="margin-bottom:1em;">
+		<div class="well tt-side-wrap" id="tt-my-stuff">
+			<h4>Stories</h4>
+			{% include 'blocks/my_stories_list.html' %}
+		</div>
+	</div>
+	<div id="tt-mystuff" class="span7" style="margin-bottom:1em;">
+		<div class="tt-tasks">
+			<h3 class="page-subtitle">Tasks</h3>
+			{% include 'blocks/my_stuff_story_tasks.html' %}
+		</div>
+	</div>
+</div>
+{% endblock main %}
