--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -1,6 +1,18 @@
 {% extends 'skeleton.html' %}{% block title %}Backlog - Story: {% if story.is_green %}G/{% endif %}{{ story.title }}{% endblock title %}
-{% block main %}{% include 'blocks/backlog_list.html' %}
-			<div id="tt-backlog">
-				<h2 class="tt-backlog">Backlog - Tasks for Story: {% if story.is_green %}G/{% endif %}{{ story.title }}</h2>
-				{% include 'blocks/tasks_list.html' %}
-			</div>{% endblock main %}
+{% block main %}
+<div class="row-fluid">
+	<div class="span12">
+		<h2 class="tt-backlog">Backlog - Tasks for Story: {% if story.is_green %}G/{% endif %}{{ story.title }}</h2>
+	</div>
+</div>
+<div class="row-fluid">
+	<div class="span4">
+		<div class="well">
+			{% include 'blocks/backlog_list.html' %}
+		</div>
+	</div>
+	<div id="tt-backlog" class="span8">
+		{% include 'blocks/tasks_list.html' %}
+	</div>
+</div>			
+{% endblock main %}
