--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -1,6 +1,5 @@
 {% extends 'skeleton.html' %}
-{% block main_classes %} tt-index{% endblock main_classes %}
-{% block head_classes %} tt-index{% endblock head_classes %}
+{% block body_classes %}tt-index{% endblock body_classes %}
 {% block sidebar %}{% endblock sidebar %}
 {% block main %}
 <div class="hero-unit">
