--- a/web/templates/pages/password_reset_complete.html
+++ b/web/templates/pages/password_reset_complete.html
@@ -1,4 +1,5 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - Reset Password{% endblock title %}
 {% block main %}
 <div class="alert alert-block alert-success">Your password has been reset. The access with the old one is no longer possible.</div>
-{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% endblock main %}
+{% block body_classes %}tt-login{% endblock body_classes %}
