--- a/web/templates/pages/password_reset_confirm.html
+++ b/web/templates/pages/password_reset_confirm.html
@@ -2,4 +2,5 @@
 {% block main %}
 <div class="alert alert-block">To set the new password, just enter the new one twice to the form below.</div>
 {% include 'blocks/password_reset_confirm.html' %}
-{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% endblock main %}
+{% block body_classes %}tt-login{% endblock body_classes %}
