--- a/media/css/modern.css
+++ b/media/css/modern.css
@@ -18,9 +18,20 @@
 	color: #333;
 	border-bottom: 1px solid #EEE;
 }
+.page-header-top {
+	background: whiteSmoke;
+	padding: 10px 0px 10px;
+	margin: 0 0 30px 0;
+	border-bottom: 1px solid #DDD;
+	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.5);
+	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.5);
+	box-shadow: 0 1px 0 rgba(255,255,255,0.5);
+}
+.page-header-top .btn-toolbar {margin:4px 0 0 0;}
 
 /* Index */
-#tt-main.tt-index .hero-unit h1 {font-family:'Norican',cursive;}
+body.tt-index .hero-unit h1 {font-family:'Norican',cursive;}
+body.tt-index .page-header-top {display:none;}
 
 /* Board */
 #tt-board-columns {margin:0;}
@@ -92,8 +103,14 @@
 
 .tt-side-list.tt-sidelist-open p, .tt-side-list.tt-sidelist-open ol, .tt-side-list.tt-sidelist-open span {display:block;}
 
-/* Responsible */
+/* Responsive */
 @media (max-width: 480px) {
 	#tt-main.tt-index .hero-unit h1 { font-size:32px; }
 	#tt-board-columns > li {display:block;width:auto;margin-right:0;}
+}
+/*.navbar-fixed-top {margin-bottom:0;}*/
+@media (max-width: 777px) {
+	body, body.tt-index {padding-top:0;}
+	.navbar-fixed-top {margin-bottom:0;}
+	body.tt-index .navbar-fixed-top {margin-bottom:20px;}
 }
