--- a/web/templates/blocks/tasks_list.html
+++ b/web/templates/blocks/tasks_list.html
@@ -1,24 +1,31 @@
-{% load form_tags %}<form action="{{ task_formset.action }}" method="post" id="tt-tasks" class="tt-form">
-						<fieldset>
-							{{ task_formset.management_form }}
-							<ol>{% for form in task_formset.forms %}
-								<li class="tt-inline-form">{% if form.non_field_errors|length %}
-									{{ form.non_field_errors }}{% endif %}
-									<ol>{% for field in form %}{% if not field.is_hidden %}
-										<li>
-											{{ field.label_tag }}
-											{{ field|one_line }}{% if field.help_text %}
-											<span class="tt-form-help">{{ field.help_text }}</span>{% endif %}{% if field.errors|length %}
-											{{ field.errors }}{% endif %}
-										</li>{% endif %}{% endfor %}
-									</ol>
-								</li>{% endfor %}
-							</ol>
-							<div>
-								{% csrf_token %}{% for form in task_formset.forms %}{% for field in form %}{% if field.is_hidden %}
-								{{ field }}{% endif %}{% endfor %}{% endfor %}
-								<input type="hidden" name="story_id" id="story_id" value="{{ story.id }}" />
-								<input id="submit" name="submit" type="submit" value="Submit Changes" />
-							</div>
-						</fieldset>
-					</form>
+{% load form_tags %}
+<form action="{{ task_formset.action }}" method="post" id="tt-tasks" class="form-vertical">
+	<fieldset>
+		<legend>Tasks</legend>
+		
+		{% for form in task_formset.forms %}
+			{% if form.non_field_errors|length %}{{ form.non_field_errors }}{% endif %}
+				{% for field in form %}
+				{% if not field.is_hidden %}
+				<div class="control-group">
+					<label class="control-label">{{ field.label }}</label>
+					<div class="controls">
+						{{ field|one_line }}
+						{% if field.help_text %}<p class="help-block">{{ field.help_text }}</p>{% endif %}
+					{% if field.errors|length %}{{ field.errors }}{% endif %}
+					</div>
+				</div>
+				{% endif %}
+				{% endfor %}
+		{% endfor %}
+		
+		{{ task_formset.management_form }}
+		
+		<div class="form-actions">
+			{% csrf_token %}{% for form in task_formset.forms %}{% for field in form %}{% if field.is_hidden %}
+			{{ field }}{% endif %}{% endfor %}{% endfor %}
+			<input type="hidden" name="story_id" id="story_id" value="{{ story.id }}" />
+			<input id="submit" name="submit" class="btn btn-primary" type="submit" value="Submit Changes" />
+		</div>
+	</fieldset>
+</form>
