--- a/web/templates/pages/my_stuff.html
+++ b/web/templates/pages/my_stuff.html
@@ -1,13 +1,12 @@
 {% extends 'skeleton.html' %}{% block title %}TicketTracker - My Stuff{% endblock title %}
-{% block main %}
-<div class="row-fluid" style="margin-bottom:9px;">
-	<div class="span12">
-		<div class="btn-toolbar pull-right" style="margin:0;">
+{% block page_header %}
+		<div class="btn-toolbar pull-right">
 			<a href="{% url web.my_stuff_story_fire %}" class="btn"><i class="icon-fire"></i> Add Fire</a>
 		</div>
 		<h2>My Stuff{% if not current_sprint %} - No Active Sprint{% endif %}</h2>
 	</div>
-</div>
+{% endblock %}
+{% block main %}
 <div class="row-fluid">
 	<div class="span8">
 		<div class="well tt-side-wrap" id="tt-my-stuff">
