--- a/web/templates/pages/password_reset.html
+++ b/web/templates/pages/password_reset.html
@@ -5,4 +5,5 @@
 	<p>After you submit the form with the new data, you will receive an email with the link for confirmation of the change.</p>
 </div>
 {% include 'blocks/password_reset.html' %}
-{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% endblock main %}
+{% block body_classes %}tt-login{% endblock body_classes %}
