--- a/web/templates/pages/password_reset_done.html
+++ b/web/templates/pages/password_reset_done.html
@@ -2,4 +2,5 @@
 {% block main %}
 <div class="alert alert-block">You have received an email with the instruction for your password reset and a link to the page where you can finish the process. <strong>Your old password is no longer usable.</strong>
 </div>
-{% endblock main %}{% block main_classes %} tt-login{% endblock main_classes %}
+{% endblock main %}
+{% block body_classes %}tt-login{% endblock body_classes %}
