--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -1,17 +1,19 @@
-{% extends 'skeleton.html' %}{% block title %}Backlog - Story: {% if story.is_green %}G/{% endif %}{{ story.title }}{% endblock title %}
+{% extends 'skeleton.html' %}
+{% block title %}Backlog - Story: {% if story.is_green %}G/{% endif %}{{ story.title }}{% endblock title %}
 {% block main %}
-<div class="row-fluid">
+<!--div class="row-fluid">
 	<div class="span12">
 		<h2 class="tt-backlog">Backlog - Tasks for Story: {% if story.is_green %}G/{% endif %}{{ story.title }}</h2>
 	</div>
-</div>
+</div-->
 <div class="row-fluid">
-	<div class="span4">
-		<div class="well">
+	<div class="span5" style="margin-bottom:1em;">
+		<div class="well tt-side-wrap">
+			<h4>Backlog</h4>
 			{% include 'blocks/backlog_list.html' %}
 		</div>
 	</div>
-	<div id="tt-backlog" class="span8">
+	<div class="span7" style="margin-bottom:1em;" id="tt-backlog">
 		{% include 'blocks/tasks_list.html' %}
 	</div>
 </div>			
